@@ -45,8 +45,8 @@ public class AnswerController {
 //        SiteUser author = userService.getUser(2); // 임시로 사용했던 것을 pricipal을 통해 사용자를 받아온다
         SiteUser author = userService.getUser(principal.getName());
 
-        answerService.create(question, answerForm.getContent(), author);
-        return "redirect:/question/detail/%d".formatted(id);
+        Answer answer = answerService.create(question, answerForm.getContent(), author);
+        return "redirect:/question/detail/%d#answer_%d".formatted(id, answer.getId());
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -77,7 +77,7 @@ public class AnswerController {
 
         answerService.modify(answer, answerForm.getContent());
 
-        return "redirect:/question/detail/%d".formatted(answer.getQuestion().getId());
+        return "redirect:/question/detail/%d#answer_%d".formatted(answer.getQuestion().getId(), id);
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -100,7 +100,7 @@ public class AnswerController {
         Answer answer = answerService.getAnswer(id);
         SiteUser siteUser = userService.getUser(principal.getName());
         answerService.vote(answer, siteUser);
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+        return "redirect:/question/detail/%d#answer_%d".formatted(answer.getQuestion().getId(), id);
     }
 
 
