@@ -117,7 +117,7 @@ public class QuestionConreoller {
 
         questionService.vote(question, siteUser);
 
-        return String.format("redirect:/question/detail/%s", id);
+        return "redirect:/question/detail/%d".formatted(id);
     }
 
 
